--- a/index.css
+++ b/index.css
@@ -1,9 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+
 * {
     padding: 0px;
     margin: 0px;
 }
 
 body {
+    font-family: 'Roboto';
     background-color: grey;
 }
 
