✨ feat(Green Plants): Page Start

--- a/pwaApp/src/app/shared/navbar/navbar.component.scss
+++ b/pwaApp/src/app/shared/navbar/navbar.component.scss
@@ -5,13 +5,11 @@ nav {
     top: 0px;
     left: 0px;
     bottom: 0px;
-    width: 32px;
-
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
-    padding: 1rem 1rem;
+    padding: 1rem 0rem;
     background-color: var(--color-primary);
     z-index: 1;
 
@@ -21,9 +19,8 @@ nav {
     color: white;
 
     .logo img {
-        width: 30px;
-        height: 30px;
-        margin-inline: auto;
+        width: 32px;
+        height: 32px;
     }
 
     mat-icon {
@@ -35,6 +32,7 @@ nav {
         list-style: none;
         padding: 0px;
         position: relative;
+        padding-inline: 1rem 1.5rem;
 
         li {
 
@@ -54,7 +52,7 @@ nav {
 
     div.marker {
         position: absolute;
-        right: -22px;
+        right: -1px;
         top: 0px;
         transition: 0.5s;
         transform: translate(0px, calc(-100vh));
@@ -64,6 +62,7 @@ nav {
             height: auto;
             filter: drop-shadow(-2px 6px 8px hsla(0, 0%, 0%, 0.5));
             -webkit-filter: drop-shadow(-2px 6px 8px hsla(0, 0%, 0%, 0.5));
+            clip-path: polygon(-100% -100%, 100% -100%, 100% 200%, -100% 200%);
         }
     }
 }
