--- a/pwaApp/src/app/home/green/green.component.html
+++ b/pwaApp/src/app/home/green/green.component.html
@@ -1,1 +1,34 @@
-<p>green works!</p>
+<div class="container">
+    <h2>Green</h2>
+    <h1>Plants</h1>
+    <div class="product">
+        <div class="product-image">
+            <img>
+        </div>
+        <div class="product-info">
+            <h1>Turf pot plant</h1>
+            <p>Big leaf plant in a turf pot for your home or office decor</p>
+            <span class="price">R$45,00 </span>
+        </div>
+    </div>
+    <div class="product">
+        <div class="product-image">
+            <img>
+        </div>
+        <div class="product-info">
+            <h1>Scandinavian Plant</h1>
+            <p>Low maintenance flower in a white ceramic pot</p>
+            <span class="price">R$62,00</span>
+        </div>
+    </div>
+    <div class="product">
+        <div class="product-image">
+            <img>
+        </div>
+        <div class="product-info">
+            <h1>Brazillian Plant</h1>
+            <p>A plant originary from Brazillian flora. Most of plant are found there, but this definitly is brasillian. I guess...</p>
+            <span class="price">R$37,99</span>
+        </div>
+    </div>
+</div>
