--- a/pwaApp/src/app/home/green/green.component.html
+++ b/pwaApp/src/app/home/green/green.component.html
@@ -3,32 +3,32 @@
     <h1>Plants</h1>
     <div class="product">
         <div class="product-image">
-            <img>
+            <img src="http://atlas-content-cdn.pixelsquid.com/stock-images/potted-plant-flower-pot-mdm41mF-600.jpg" alt="Green Plant in a pot">
         </div>
         <div class="product-info">
             <h1>Turf pot plant</h1>
             <p>Big leaf plant in a turf pot for your home or office decor</p>
-            <span class="price">R$45,00 </span>
+            <span class="price">R$45,00 <mat-icon>add</mat-icon> </span>
         </div>
     </div>
     <div class="product">
         <div class="product-image">
-            <img>
+            <img src="https://cdn.shopify.com/s/files/1/0818/5369/products/SNOWE_TheEveryEdit_WorkFromHome_LBE_LeonGeorge_C20936_1024x.jpg?v=1599743825" alt="Scandinavian Plant in a pot">
         </div>
         <div class="product-info">
             <h1>Scandinavian Plant</h1>
             <p>Low maintenance flower in a white ceramic pot</p>
-            <span class="price">R$62,00</span>
+            <span class="price">R$62,00 <mat-icon>add</mat-icon></span>
         </div>
     </div>
     <div class="product">
         <div class="product-image">
-            <img>
+            <img src="https://www.kindpng.com/picc/m/18-187979_philodendron-brazil-hanging-basket-hd-png-download.png" alt="Samambaia">
         </div>
         <div class="product-info">
             <h1>Brazillian Plant</h1>
             <p>A plant originary from Brazillian flora. Most of plant are found there, but this definitly is brasillian. I guess...</p>
-            <span class="price">R$37,99</span>
+            <span class="price">R$37,99 <mat-icon>add</mat-icon></span>
         </div>
     </div>
 </div>
