--- a/pwaApp/src/app/home/green/green.component.scss
+++ b/pwaApp/src/app/home/green/green.component.scss
@@ -22,12 +22,21 @@ $grey-color: hsla(0, 0%, 0%, 0.50);
 
     .product {
 
+        margin-top: 2em;
+
         & > .product-image {
             width: 100%;
             height: auto;
             max-width: 100%;
             max-height: 100%;
             margin-bottom: 2em;
+
+            & > img {
+                width: 100%;
+                height: auto;
+                max-width: 100%;
+                max-height: 100%;
+            }
         }
 
         & > .product-info {
@@ -51,6 +60,18 @@ $grey-color: hsla(0, 0%, 0%, 0.50);
                 margin-top: 0.5em;
                 font-size: 1.125em;
                 font-weight: bolder;
+                display: flex;
+                align-items: center;
+
+                mat-icon {
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    font-size: 20px;
+                    margin-left: 1em;
+                    border-radius: 50%;
+                    box-shadow: 2px 2px 15px rgba(0,0,0,0.25);
+                }
             }
 
 
